# labs.

./: 13.cpp  MergeSort.cpp  QuickSort.cpp  README.md  RadixSrot.cpp  ex1.cpp  ex2.txt  ex6.cpp  input.txt  lab14.cpp  lab15-16.cpp  lab17.cpp  lab18.cpp  lab19.cpp  lab_1.cpp  lab_10.cpp  lab_11.cpp  lab_12.cpp  lab_13.cpp  lab_14.cpp  lab_15.cpp  lab_16.cpp  lab_17.cpp  lab_18.cpp  lab_2.cpp  lab_3.cpp  lab_4.cpp  lab_5.cpp  lab_6.cpp  lab_7.cpp  lab_8.cpp  lab_9.cpp  okongod.cpp
4.1/: 4.1.sln
4.1.edit/: 4.1.edit.sln
4.2/: 4.2.sln
4.3/: ConsoleApplication5.sln
AnimatedText/: AnimatedText.vcxproj  CmakeLists.txt
FirstProject/: Animation.cpp  Animation.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  FirstProject.cpp  FirstProject.vcxproj  FirstProject.vcxproj.filters
FirstProject/x64/Debug/: FirstProject.exe.recipe  FirstProject.ilk  vc143.idb
FirstProject/x64/Debug/FirstProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FirstProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Game/: Ball.hpp  CMakeLists.txt  Func.cpp  Func.hpp  Game.cpp  Game.vcxproj  Game.vcxproj.filters
HeapSort/: HeapSort.cpp  HeapSort.vcxproj  HeapSort.vcxproj.filters
SecondProject/: Animation.hpp  AnimationPlayer.cpp  CMakeLists.txt  Markdown.txt  Player.hpp  SecondProject.cpp
lab.8/: lab.8.sln
lab1/: AnimatedText.sln
lab10/: lab10.sln
lab11/: sfml_sample.sln
lab12/: input.txt  lab12.cpp
lab2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  lab2.cpp  (+4 more)
(+158 files in other folders)
